# cppHelper

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.sh  README.md
controller/Command/: Command.h
controller/Config/: Config.cc  Config.h  Config.ih  initPathsToIgnoreForOrder.cc
controller/Exercises/: Exercises.h  Exercises.ih  Exercises1.cc  Exercises2.cc  getExercisePath.cc  getExercisesAsNumbers.cc  getExercisesAsPaths.cc  getSetFolder.cc
controller/GenFolder/: GenFolder.cc  GenFolder.h  GenFolder.ih  createFolderStructure.cc  execute.cc  replaceStrings.cc
controller/GenOrder/: GenOrder.cc  GenOrder.h  GenOrder.ih  excludedPath.cc  execute.cc  inExRootFolder.cc  reorderFilesToAdd.cc  sameFile.cc  sameFolder.cc  writeToOrderFile.cc
controller/PrioConfig/: PrioConfig.h  comparePrioWithExt.cc  comparePrioWithFile.cc  createDefaultPrioFile.cc  initPrioList.cc
controller/ZipCommand/: ZipCommand.cc  ZipCommand.h  ZipCommand.ih  addFilesFromExercise.cc  execute.cc  validExerciseSubmission.cc
executables/main/: handleExceptions.cc  main.cc  main.ih
executables/playground/: main.cc  main.ih
executables/test/: flagTests.cc  test.ih
frontend/CLI/: CLI.cc  CLI.h  CLI.ih  handleException.cc  readCommand.cc  usage.cc
frontend/CLIParser/: CLIParser.h  CLIParser.ih
frontend/Frontend/: Frontend.h  Frontend.ih
frontend/FrontendException/: FrontendException.cc  FrontendException.h  FrontendException.ih  what.cc
frontend/GenFolderParser/: GenFolderParser.h  GenFolderParser.ih  readCommand.cc
frontend/GenOrderParser/: GenOrderParser.h  GenOrderParser.ih  readCommand.cc
frontend/ZipCommandParser/: ZipCommandParser.h  ZipCommandParser.ih  readCommand.cc
lib/ArgParser/: ArgParser.h  ArgParser.ih  ArgParser1.cc  ArgParserbase.h  addArguments.cc  addFlag.cc  addQuotes.cc  error.cc  grammar  makeArgIStream.cc  parse.cc  setCmdType.cc
lib/ArgScanner/: ArgScanner.h  ArgScanner.ih  ArgScannerbase.h  lex.cc  lexer  tokens.h
lib/AslZip/: AslZip.cc  AslZip.h  AslZip.ih  zip.cc
lib/Command/: Command.h  Command.ih
lib/CommandRecipe/: CommandRecipe.h  CommandRecipe.ih  setCmdType.cc  staticDefs.cc
lib/Config/: Config.cc  Config.h  Config.ih  comparePrioWith.cc  createDefaultPrioFile.cc  getPathsToIgnoreForOrder.cc  instance.cc  orderFilePriority.cc  setFilePrioFunction.cc  staticDefs.cc
lib/Flag/: Flag.cc  Flag.h  Flag.ih
lib/GenFolder/: GenFolder.cc  GenFolder.h  GenFolder.ih  execute.cc  noFolderInArgs.cc  setMainArguments.cc
lib/GenOrder/: GenOrder.cc  GenOrder.h  GenOrder.ih  excluded.cc  excludedExercise.cc  execute.cc  genPrefixPath.cc  getExerciseFolders.cc  getFilesToAdd.cc  inExRootFolder.cc  reorderFilesToAdd.cc  sameFile.cc  sameFolder.cc  writeToOrderFile.cc
lib/LinuxZip/: LinuxZip.cc  LinuxZip.h  LinuxZip.ih  zip.cc
lib/Relation/: Relation.h  Relation.ih
lib/Zip/: Zip.cc  Zip.h  Zip.ih  execute.cc
lib/free_functions/: allFilesIn.cc  contains.hi  free_functions.h  free_functions.ih  handleExceptions.cc  replaceStringsInFile.cc  replaceStringsInFolder.cc  splitPath.cc  stringToVectorByDelim.hi  withLeadingZeros.cc
model/Config/: Config.cc  Config.h  Config.ih  createDefaultIgnoreFile.cc  createDefaultMetdataFile.cc  (+2 more)
scripts/: remakeparser.sh
(+22 files in other folders)
